package com.directi.training.dip.exercise_refactored;

import java.io.IOException;

interface Reader {
    String read() throws IOException;
}
