package com.directi.training.dip.exercise_refactored_;

interface Encoder {
    String encode(String input);
}
