package com.directi.training.dip.exercise_refactored_;
interface Writer {
    void write(String input);
}
