@startuml DIP

interface Encoder {
    +encode(String input): String
}

class Base64Encoder implements Encoder {
    +encode(String input): String
}

interface Reader {
    +read(): String
}

interface Writer {
    +write(String input)
}

class FileReader implements Reader {
    +read(): String
}

class NetworkReader implements Reader {
    +read(): String
}

class FileWriter implements Writer {
    +write(String input)
}

class DatabaseWriter implements Writer {
    +write(String input)
}

class EncodingModule {
    +encode(Reader reader, Writer writer): String
}

class MyDatabase {
    +write(String input): int
}

EncodingModule o-- Encoder
EncodingModule --> Reader
EncodingModule --> Writer
MyDatabase --o DatabaseWriter

@enduml